Fix overflowing events

--- a/src/ClientApp/src/app/planetside/worlds/world/map/zone/planetside-world-zone.styles.css
+++ b/src/ClientApp/src/app/planetside/worlds/world/map/zone/planetside-world-zone.styles.css
@@ -28,7 +28,8 @@
 .map-log {
     font-size: 14px;
     padding: 10px;
-    
+    height: 535px;
+    overflow-y: auto;
 }
 .map-log .timestamp {
     opacity: 0.8;
